Fixing Footer alignment

--- a/src/App.css
+++ b/src/App.css
@@ -101,10 +101,13 @@
 
 .submit_btn {
   @apply hover:border-gray-700 hover:text-gray-700 absolute inset-y-0 right-0 my-1.5 mr-1.5 flex w-10 items-center justify-center rounded border border-gray-200 font-sans text-sm font-medium text-gray-400;
-  background: linear-gradient(to right, #0074FF, #00A1FF); /* Replace these colors with your desired gradient colors */
+  background: linear-gradient(
+    to right,
+    #0074ff,
+    #00a1ff
+  ); /* Replace these colors with your desired gradient colors */
   color: white; /* Set the text color to make it readable on the blue gradient */
 }
-
 
 .link_card {
   @apply p-3 flex justify-start items-center flex-row bg-white border border-gray-200 gap-3 rounded-lg cursor-pointer;
@@ -120,4 +123,22 @@
 
 .summary_box {
   @apply rounded-xl border border-gray-200 bg-white/20 shadow-[inset_10px_-50px_94px_0_rgb(199,199,199,0.2)] backdrop-blur p-4;
+}
+
+.blue-bg {
+  background-color: #0073b1;
+  color: #fff;
+  padding: 10px 20px;
+  border: none;
+  cursor: pointer;
+}
+
+footer {
+  background-color: #0073b1; /* Set your desired background color */
+  color: #fff;
+  padding: 10px 20px;
+  text-align: center;
+  border: none;
+  cursor: pointer;
+  min-height: 50%;
 }
